// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditAndPreviewPage renders a page 1`] = `
<FullPage
  breadcrumbRedirectsTo="/templatesv2"
  primaryArea={
    <React.Fragment>
      <div
        className="Status"
      >
        <span>
          Draft
        </span>
        <FileEdit
          size={17}
        />
      </div>
    </React.Fragment>
  }
  title="Test Template (DRAFT)"
>
  <div
    className="EditorNav"
  >
    <EditNavigation
      primaryArea={<EditContentsPrimaryArea />}
    />
  </div>
  <div
    className="MainContent"
  >
    <EditContents />
  </div>
  <Prompt
    message="Are you sure you want to leave the page? If you return to the previous page, your work will not be saved."
    when={true}
  />
</FullPage>
`;

exports[`EditAndPreviewPage renders a page in published mode 1`] = `
<React.Fragment>
  <div
    className="Status"
  >
    <span>
      Published
    </span>
    <CheckCircle
      className="GreenColor"
      size={17}
    />
  </div>
</React.Fragment>
`;
